<resources>
    <string name="app_name">Oye Bhangarwala</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Full Name</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="newuser">New User?</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="contact">10-digit mobile number</string>
    <string name="address1">Flat / House No. / Floor / Building</string>
    <string name="signup">Sign Up</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="product_type">Product Type</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="writecomment">Write Something</string>
    <string name="select">Select</string>
    <string name="product_id">Product Id</string>
    <string name="product_quantity">Quantity</string>
    <string name="email_id">Enter Eamil Id</string>
    <string name="term">By clicking Create Account, you agree to our Terms and confirm that you have read our Data Policy</string>
    <string name="oder_details">Order Details</string>
    <string name="order_history">Order History</string>
    <string name="about_us">About Developer</string>
    <string name="sample">Contact Developer</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_message">Are You  Sure You Want To Delete This Item</string>
    <string name="confirm_Oder">Are You Sure You Have Added All Item</string>
    <string name="thank">Thank You</string>
    <string name="some_text">Your submission is received and we will contact ypu soon</string>
    <string name="back">Back to Home</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="addinfo">Add Address</string>
    <string name="address2">Colony  / Street / Locality</string>
    <string name="address3">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="your_address">Your Address</string>
    <string name="personal_address">Personal Address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_address">Select a Delivery Address</string>
    <string name="select_this_address">Select this Address</string>
    <string name="paytm">PayTM Wallet</string>
    <string name="bank">Bank Transfer</string>
    <string name="payu">PayU Money Wallet</string>
    <string name="paytmno">PayTm Mobile Number</string>
    <string name="bankName">Account Holder Name</string>
    <string name="bankAccountNo">Account Number</string>
    <string name="bankConfirmAccountNo">Confirm Account Number</string>
    <string name="bankIFSCCode">IFSC Code</string>
    <string name="payuno">PayU Money Mobile Number</string>
</resources>
