<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/appback"
    tools:context="com.techflux.oyebhangarwala.activity.RegistrationActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_margin="@dimen/activity_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/color_black"
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_Top_margin"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/layout_border"
        android:alpha="0.75"
        android:layout_below="@+id/textView2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin_reg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin_reg"
            android:id="@+id/et_register_username"
            android:inputType="textCapWords"
            android:hint="@string/username"
            android:textColorHint="@color/color_grey"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin_reg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin_reg"
            android:id="@+id/et_register_email"
            android:inputType="textCapWords"
            android:hint="@string/email"
            android:textColorHint="@color/color_grey"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin_reg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin_reg"
            android:inputType="textPassword"
            android:id="@+id/et_register_password"
            android:hint="@string/password"
            android:textColorHint="@color/color_grey"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin_reg"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin_reg"
            android:inputType="textPassword"
            android:id="@+id/et_register_confirm_password"
            android:hint="@string/confirmpassword"
            android:textColorHint="@color/color_grey"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="10dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentStart="true"
            android:id="@+id/checkBox_term" />
    </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"
            android:text="@string/signup"
            android:id="@+id/btn_register"
            android:textColor="@color/color_white"
            android:background="@color/color_blue"
            android:layout_below="@+id/layout"
            android:layout_centerHorizontal="true" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_register"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_new_user"
                android:text="@string/signin"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <View
                android:layout_width="45dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_below="@+id/tv_new_user"
                android:background="@color/colorAccent" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
